[package]
name = "axum-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"

# Axum
axum = { version = "0.6", features = ["http2"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"

#Others
lazy-regex = "2"
async-trait = "0.1"
strum = "0.24"
strum_macros = "0.24"
uuid = { version = "1", features = ["fast-rng", "v4",] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"

